WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217007
[LFC][IFC] Incorrect breaking position when inline box content fits the line but the inline content itself does not.
https://bugs.webkit.org/show_bug.cgi?id=217007
Summary
[LFC][IFC] Incorrect breaking position when inline box content fits the line ...
alan
Reported
2020-09-25 20:51:01 PDT
<span style="border-right: 100px;">this text fits</span> <-text fits but the border does not.
Attachments
Patch
(6.16 KB, patch)
2020-09-25 21:15 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-09-25 21:15:21 PDT
Created
attachment 409767
[details]
Patch
EWS
Comment 2
2020-09-25 22:21:23 PDT
Committed
r267617
: <
https://trac.webkit.org/changeset/267617
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409767
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-25 22:22:14 PDT
<
rdar://problem/69611670
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug